# dungeon-pipeline

./: .gitignore  .gitmodules  Dungance Designer.lnk  Dungance Painter.lnk  Dungaya.desktop  Dungaya.lnk  Dungini.desktop  Dungini.lnk  LICENSE  Nungeon.desktop  Nungeon.lnk  README.md  Shraya.lnk  Substance Painter.lnk  pipe.m.ToolBox.Robin_Face_Locators.py  pyproject.toml  ruff.toml
.githooks/: post-checkout  pre-commit  setup-venv  shotgun.pyi  update-venv
pipe/: __init__.py  main.py
pipe/lib/: __init__.py  util.py
pipe/lib/ocio/: HEAD
pipe/software/: baseclass.py
pipe/software/houdini/: Dungini.lnk  __init__.py  dcc.py
pipe/software/maya/: Dungaya.lnk  dcc.py
pipe/software/nuke/: Nungeon.lnk  __init__.py  dcc.py
pipe/software/substance/: Substance Painter.lnk  __init__.py  dcc.py
pipeline/: __main__.py  env.py.md
pipeline/lib/: normal2height.sbs
pipeline/lib/ae_SVG/: .gitignore  AeSVG.json  README.md
pipeline/lib/sbs/: normal2height.sbsar
pipeline/lib/sp_assets/: .gitignore
pipeline/lib/tex/: Reflective-Macbeth-chart_srgbtex_acescg.png.tex
pipeline/pipe/: __init__.py  struct.py  texconverter.py  util.py
pipeline/pipe/db/: __init__.py  interface.py  sgaadb.py  shotgun_api3  typing.py
pipeline/pipe/glui/: dialogs.py
pipeline/pipe/h/: __init__.py  hipfile.py  local.py  nodelayouts.py  shading.py
pipeline/pipe/m/: __init__.py  anim.py  asset.py  camera.py  local.py  picker.py  playblast.py  publish.py  reload.py  rig_publish.py  shotfile.py  space_switch.py  (+2 more)
pipeline/shared/: __init__.py  struct.py  texconverter.py  util.py
pipeline/software/: __init__.py  baseclass.py  interface.py
(+316 files in other folders)
